--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
   <string name="action_settings">Settings</string>
   <string name="login_failure_message">Unable to log in with Google Sign In.</string>
   <string name="oauth_header">Bearer %s</string>
+  <string name="sign_out">Sign out</string>
 </resources>
